--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -11,6 +11,10 @@
     <article>
       <ul>
         <li>
+          Автор: {{ author.get_full_name }}
+          <a href="{% url 'posts:profile' post.author.username %}">Все посты пользователя</a>
+        </li>
+        <li>
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
       </ul>
