--- a/yatube/templates/posts/includes/post_for_list.html
+++ b/yatube/templates/posts/includes/post_for_list.html
@@ -8,7 +8,7 @@
     </li>
   </ul>
   <p>{{ post.text }}</p>
-  <a href="{% url 'posts:post_detail' post_id=post.pk %}">Подробная информация </a>
+  <a href="{% url 'posts:post_detail' post.id %}">Подробная информация </a>
   </article>
   {% if post.group %}
     <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
