--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,1 +1,1 @@
-<p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>
+<p>© {% now "j M Y" %} Copyright <span style="color:red">Ya</span>tube</p>
