--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -14,20 +14,24 @@
               {% else %}
                 Добавить запись
               {% endif %}
+              {% comment %}is_edit передаются из вью post_edit{% endcomment %}
             </div>
             <div class="card-body">
               <form method="post" action="{% url 'posts:post_create' %}">
                 {% csrf_token %}
-                <div class="form-group row my-3 p-3">
-                  <label for="id_text">Текст поста<span class="required text-danger" >*</span></label>
-                    {{ form.text }}
-                  <small id="id_text-help" class="form-text text-muted">Текст нового поста</small>
-                </div>
-                <div class="form-group row my-3 p-3">
-                  <label for="id_group">Group</label>
-                    {{ form.group }}
-                  <small id="id_group-help" class="form-text text-muted">Группа, к которой будет относиться пост</small>
-                </div>
+                  {% for field in form %}
+                    <div class="form-group row my-3 p-3">
+                      <label for="{{ field.id_for_label }}">
+                        {{ field.label }}
+                          <span class="required text-danger" ></span>
+                      </label>
+                    <div>
+                      {{ field }}
+                        <small id="{{ field.id_for_label }}-help" class="form-text text-mut">
+                          <p>{{ field.help_text}}</p>
+                        </small>
+                    </div>
+                {% endfor %}
                 <div class="d-flex justify-content-end">
                   <button type="submit" class="btn btn-primary">
                     {% if is_edit %}
