--- a/yatube/templates/posts/includes/post_for_list.html
+++ b/yatube/templates/posts/includes/post_for_list.html
@@ -2,13 +2,14 @@
   <ul>
     <li>
       Автор: {{ post.author.get_full_name }}
+      <a href="{% url 'posts:profile' post.author.username %}">Все посты пользователя</a>
     </li>
     <li>
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
   </ul>
-  <p>{{ post.text }}</p>
-  <a href="{% url 'posts:post_detail' post_id=post.pk %}">Подробная информация </a>
+  <p>{{ post.text|truncatewords:50 }}</p>
+  <a href="{% url 'posts:post_detail' post.id %}">Подробная информация </a>
   </article>
   {% if post.group %}
     <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
