--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    {{ post.text|truncatewords:30 }}
+    {{ post.text|truncatechars:30  }}
 {% endblock %}
-<!-- я бы сделал truncatewords:10, более приятно смотрится, не переполнен заголовок -->
 
 {% block content %}
   <div class="row">
